<resources>
    <string name="app_name">SalesTracker Sales</string>
    <string name="title_activity_login">Sign in</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="prompt_first_name">First Name *</string>
    <string name="prompt_last_name">Last Name *</string>
    <string name="prompt_email_asterisk">Email *</string>
    <string name="prompt_phone">Phone *</string>

    <string name="label_logout">LOGOUT</string>
    <string name="label_cancel">CANCEL</string>
    <string name="logout_confirmation">LOGOUT?</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
</resources>
