<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context=".activities.BusinessDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabelPrimary"
                android:layout_marginTop="@dimen/margin_short">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabelPrimary"
                android:layout_marginTop="@dimen/margin_short">

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabelPrimary"
                android:layout_marginTop="@dimen/margin_short">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email_asterisk"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabelPrimary"
                android:layout_marginTop="@dimen/margin_short">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:inputType="textPhonetic"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/btnUpdateProfile"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                style="@style/CardViewGeneral"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_gravity="end|right">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Update"
                    android:clickable="false"
                    android:layout_centerInParent="true"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
